--- a/.github/workflows/Obfuscate.yml
+++ b/.github/workflows/Obfuscate.yml
@@ -60,9 +60,11 @@ jobs:
             fi
           done
           
-          # 验证安装
+          # 验证安装并显示版本信息
           echo "验证安装版本:"
           javascript-obfuscator --version
+          echo "查看可用选项:"
+          javascript-obfuscator --help | head -20
 
       # 第三步：获取源文件
       - name: 🌐 获取最新 Worker 文件
@@ -120,7 +122,7 @@ jobs:
           echo "📄 文件预览 (前5行):"
           head -n 5 "$SOURCE_FILE"
 
-      # 第四步：代码混淆
+      # 第四步：代码混淆（使用兼容的配置）
       - name: 🛡️ 混淆 Worker 代码
         run: |
           echo "🛡️ 开始代码混淆处理..."
@@ -133,6 +135,7 @@ jobs:
           echo "📁 源文件大小: $(du -h "$SOURCE_FILE" | cut -f1)"
           echo "🔧 执行混淆..."
           
+          # 使用基本且兼容的混淆配置
           javascript-obfuscator "$SOURCE_FILE" \
             --output "$OUTPUT_FILE" \
             --compact true \
@@ -142,10 +145,21 @@ jobs:
             --simplify true \
             --split-strings true \
             --split-strings-chunk-length 10 \
-            --shuffle-string-array true
+            --rotate-string-array true
           
           if [ $? -ne 0 ]; then
-            echo "❌ 混淆处理失败"
+            echo "❌ 混淆处理失败，尝试更简单的配置..."
+            # 如果上面的配置失败，使用最简配置
+            javascript-obfuscator "$SOURCE_FILE" \
+              --output "$OUTPUT_FILE" \
+              --compact true \
+              --identifier-names-generator hexadecimal \
+              --string-array true \
+              --string-array-threshold 0.75
+          fi
+          
+          if [ ! -f "$OUTPUT_FILE" ]; then
+            echo "❌ 错误: 输出文件未生成"
             exit 1
           fi
           
