--- a/.github/workflows/Obfuscate.yml
+++ b/.github/workflows/Obfuscate.yml
@@ -31,7 +31,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          # 完全移除 cache 配置
 
       # 第二步：安装必要工具
       - name: 🛠️ 安装系统工具
@@ -63,8 +62,6 @@ jobs:
           # 验证安装并显示版本信息
           echo "验证安装版本:"
           javascript-obfuscator --version
-          echo "查看可用选项:"
-          javascript-obfuscator --help | head -20
 
       # 第三步：获取源文件
       - name: 🌐 获取最新 Worker 文件
@@ -122,7 +119,7 @@ jobs:
           echo "📄 文件预览 (前5行):"
           head -n 5 "$SOURCE_FILE"
 
-      # 第四步：代码混淆（使用兼容的配置）
+      # 第四步：代码混淆（使用最基本的兼容配置）
       - name: 🛡️ 混淆 Worker 代码
         run: |
           echo "🛡️ 开始代码混淆处理..."
@@ -135,27 +132,18 @@ jobs:
           echo "📁 源文件大小: $(du -h "$SOURCE_FILE" | cut -f1)"
           echo "🔧 执行混淆..."
           
-          # 使用基本且兼容的混淆配置
+          # 使用最基本且兼容的混淆配置
           javascript-obfuscator "$SOURCE_FILE" \
             --output "$OUTPUT_FILE" \
             --compact true \
             --identifier-names-generator hexadecimal \
             --string-array true \
-            --string-array-threshold 0.75 \
-            --simplify true \
-            --split-strings true \
-            --split-strings-chunk-length 10 \
-            --rotate-string-array true
+            --string-array-threshold 0.5 \
+            --simplify true
           
           if [ $? -ne 0 ]; then
-            echo "❌ 混淆处理失败，尝试更简单的配置..."
-            # 如果上面的配置失败，使用最简配置
-            javascript-obfuscator "$SOURCE_FILE" \
-              --output "$OUTPUT_FILE" \
-              --compact true \
-              --identifier-names-generator hexadecimal \
-              --string-array true \
-              --string-array-threshold 0.75
+            echo "❌ 混淆处理失败"
+            exit 1
           fi
           
           if [ ! -f "$OUTPUT_FILE" ]; then
