--- a/.github/workflows/Obfuscate.yml
+++ b/.github/workflows/Obfuscate.yml
@@ -12,13 +12,17 @@ permissions:
 
 jobs:
   build:
+    name: 🛠️ Build and Obfuscate BPB Panel
     runs-on: ubuntu-latest
-
     steps:
-      - name: Check out the code
+      # 代码检出
+      - name: 📥 Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 1
 
-      - name: Cache npm
+      # 缓存设置
+      - name: 💾 Cache npm dependencies
         uses: actions/cache@v4
         with:
           path: ~/.npm
@@ -26,55 +30,94 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-npm-
 
-      - name: Set up Node.js
+      # 环境设置
+      - name: ⚙️ Setup Node.js environment
         uses: actions/setup-node@v4
         with:
           node-version: "latest"
+          cache: 'npm'
 
-      - name: Install dependencies
+      # 依赖安装
+      - name: 📦 Install dependencies
         run: |
-          for i in {1..3}; do npm install -g javascript-obfuscator && break || sleep 5; done
-          javascript-obfuscator --version
+          echo "Installing required packages..."
+          for i in {1..3}; do 
+            npm install -g javascript-obfuscator && break || sleep 5
+          done
+          
+          echo "Installing system dependencies..."
           sudo apt-get update
           sudo apt-get install -y jq
+          
+          echo "Verification:"
+          javascript-obfuscator --version
+          jq --version
 
-      - name: Fetch and download latest worker.js from release
+      # 文件下载
+      - name: 🌐 Download latest worker.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          RELEASE_INFO=$(curl -s -H "Authorization: token $GITHUB_TOKEN" https://api.github.com/repos/bia-pain-bache/BPB-Worker-Panel/releases/latest)
+          echo "Fetching latest release information..."
+          RELEASE_INFO=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+            "https://api.github.com/repos/bia-pain-bache/BPB-Worker-Panel/releases/latest")
+          
           RELEASE_TAG=$(echo "$RELEASE_INFO" | jq -r '.tag_name')
-          echo "Latest Release: $RELEASE_TAG"
           DOWNLOAD_URL=$(echo "$RELEASE_INFO" | jq -r '.assets[] | select(.name == "worker.js") | .browser_download_url')
+          
+          echo "📦 Latest Release: $RELEASE_TAG"
+          echo "🔗 Download URL: $DOWNLOAD_URL"
+          
           if [ -z "$DOWNLOAD_URL" ]; then
-            echo "Error: Could not find worker.js in latest release"
+            echo "❌ Error: Could not find worker.js in latest release"
             exit 1
           fi
-          echo "Downloading from: $DOWNLOAD_URL"
-          wget -O origin.js "$DOWNLOAD_URL"
-          ls -l origin.js
+          
+          echo "Downloading worker.js..."
+          wget -q --show-progress -O origin.js "$DOWNLOAD_URL"
+          
+          echo "📁 File details:"
+          ls -lh origin.js
+          echo "🔍 First 10 lines:"
           head -n 10 origin.js
 
-      - name: Obfuscate BPB worker js
+      # 代码混淆
+      - name: 🔒 Obfuscate BPB worker
         run: |
-          javascript-obfuscator origin.js --output _worker.js \
+          echo "Starting obfuscation process..."
+          javascript-obfuscator origin.js \
+            --output _worker.js \
             --compact true \
             --identifier-names-generator hexadecimal \
             --string-array true \
             --string-array-threshold 0.5 \
             --simplify true
-          ls -l _worker.js
+          
+          echo "📊 Obfuscation completed:"
+          echo "📁 Output file details:"
+          ls -lh _worker.js
+          echo "🔍 First 10 lines of obfuscated code:"
           head -n 10 _worker.js
-          # Check file size (in bytes)
-          FILE_SIZE=$(stat -f %z _worker.js || stat -c %s _worker.js)
-          echo "Output file size: $FILE_SIZE bytes"
+          
+          # 文件大小检查
+          FILE_SIZE=$(stat -f %z _worker.js 2>/dev/null || stat -c %s _worker.js)
+          echo "📏 File size: $FILE_SIZE bytes"
+          
           if [ "$FILE_SIZE" -gt 500000 ]; then
-            echo "Warning: _worker.js size exceeds 500KB, may cause Cloudflare CPU limit errors"
+            echo "⚠️  Warning: _worker.js size exceeds 500KB, may cause Cloudflare CPU limit errors"
+          else
+            echo "✅ File size within acceptable limits"
           fi
 
-      - name: Commit changes
+      # 提交更改
+      - name: 📝 Commit changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           branch: main
-          commit_message: ':arrow_up: update latest bpb panel'
+          commit_message: |
+            :arrow_up: chore: update latest BPB panel
+            - Automated update from latest release
+            - Obfuscated worker script
           commit_author: 'github-actions[bot] <github-actions[bot]@users.noreply.github.com>'
+          commit_user_email: 'github-actions[bot]@users.noreply.github.com'
+          commit_options: '--signoff'
